[package]
name = "mycpu"
version = "0.1.0"
authors = ["Lukas Wagner <lwagner94@posteo.at>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "asm"
path = "src/assembler/main.rs"

[[bin]]
name = "emulator"
path = "src/emulator/main.rs"

[[bin]]
name = "bf2asm"
path = "src/bf2asm/main.rs"


[dependencies]